added diff email

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div data-animate="fadeInUp" class="text-center">
                 <p class="lead">Would you like to know more or just discuss something?</p>
 
-                <p><a href="mailto:devwebrose@gmail.com" class="btn btn-outline-light">Contact me</a></p>
+                <p><a href="mailto:rose@webdevrose.com" class="btn btn-outline-light">Contact me</a></p>
             </div>
         </div>
     </section>
