changed the disc on flix

--- a/index.html
+++ b/index.html
@@ -357,12 +357,12 @@
                                     <div class="overlay">
                                         <div class="inner">
                                             <h3 class="h4 reference-title">Flixter</h3>
-                                            <p>I created this Udemy clone for fun. It was a creative and challenging project that I'm very proud of.</p>
+                                            <p>Udemy clone</p>
                                         </div>
                                     </div>
                                 </a>
                                 <div data-images=; class="sr-only reference-description">
-                                    <p></p>
+                                    <p>I created this Udemy clone for fun. It was a creative and challenging project that I'm very proud of.</p>
 
                                     <p class="buttons text-center"><a href="https://flixter-ed.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                                 </div>
