update some wording in intro

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                     <p>Who am I?</p>
                     <p> I'm a Full-Stack Web Developer from Nashville, TN. I have serious passion for animations and creating intuitive dynamic user experiences.</p>
                     <p>Learning has always been a passion of mine. That is what makes programming and software development such a great field to be in. There are always new things to learn and a lot of ways to approach it. The programming world is all about
-                        sharing what we know and working together to solve a problem. Creating something completely new and interesting from scratch and finding ways to make it easy for users to enjoy.</p>
-                    <p>Building quality websites and applications with C# .Net, HTML, CSS3, JavaScript, jQuery, and React. Optimizing the performance of user-centric high-impact websites. Analytical and problem- solving skills to create dynamic, high-speed
+                        sharing what we know and working together to solve problems. Creating something completely new and interesting from scratch and finding ways to make it easy for users to enjoy.</p>
+                    <p>Building quality websites and applications with C# .Net, HTML, CSS3, JavaScript, jQuery and React. Optimizing the performance of user-centric high-impact websites. Analytical and problem-solving skills to create dynamic, high-speed
                         websites, apps and platforms fueling competitive advantage and revenue growth.</p>
 
                 </div>
@@ -361,7 +361,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <div data-images=; class="sr-only reference-description">
+                                <div data-images="" class="sr-only reference-description">
                                     <p>I created this Udemy clone for fun. It was a creative and challenging project that I'm very proud of.</p>
 
                                     <p class="buttons text-center"><a href="https://flixter-ed.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
