--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- navbar-->
     <header class="header">
         <nav class="navbar navbar-expand-lg fixed-top">
-            <div class="container"><a href="#intro" class="navbar-brand scrollTo">Wed Developer</a>
+            <div class="container"><a href="#intro" class="navbar-brand scrollTo">Web Developer</a>
                 <button type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><span class="fa fa-bars"></span></button>
                 <div id="navbarcollapse" class="collapse navbar-collapse">
                     <ul class="navbar-nav ml-auto">
@@ -307,7 +307,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <div data-images=; class="sr-only reference-description">
+                                <div data-images="img/adorable-animal-blur-cat-617278.jpg" class="sr-only reference-description">
                                     <p>I created this fun website for cat lovers to input their cats info. Giving people everywhere the opportunity to get to know each others cat.
                                     </p>
 
@@ -326,7 +326,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <div data-images=; class="sr-only reference-description">
+                                <div data-images="img/white-smartphone-1851415.jpg" class="sr-only reference-description">
                                     <p>I created this instagram clone for fun! It was a creative and challenging project that I'm very proud of.
                                     </p>
 
@@ -344,7 +344,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <div data-images=; class="sr-only reference-description">
+                                <div data-images="img/close-up-of-pictures-185933.jpg" class="sr-only reference-description">
                                     <p>I created this fun project using React. Easy and fun to use.</p>
 
                                     <p class="buttons text-center"><a href="https://flashback2-rose.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
@@ -361,7 +361,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <div data-images="" class="sr-only reference-description">
+                                <div data-images="img/book-shelves-book-stack-bookcase-books-207662.jpg" class="sr-only reference-description">
                                     <p>I created this Udemy clone for fun. It was a creative and challenging project that I'm very proud of.</p>
 
                                     <p class="buttons text-center"><a href="https://flixter-ed.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
