changed the web site for the last link

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                     </div>
                                 </a>
                                 <div data-images="img/adorable-animal-blur-cat-617278.jpg" class="sr-only reference-description">
-                                    <p>I created this fun website for cat lovers to input their cats info. Giving people everywhere the opportunity to get to know each others cat.
+                                    <p style="text-align: center;">I created this fun website for cat lovers to input their cats info. Giving people everywhere the opportunity to get to know each others cat.
                                     </p>
 
                                     <p class="buttons text-center"><a href="https://meow-obsession.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a>
@@ -327,7 +327,7 @@
                                     </div>
                                 </a>
                                 <div data-images="img/white-smartphone-1851415.jpg" class="sr-only reference-description">
-                                    <p>I created this instagram clone for fun! It was a creative and challenging project that I'm very proud of.
+                                    <p style="text-align: center;">I created this instagram clone for fun! It was a creative and challenging project that I'm very proud of.
                                     </p>
 
                                     <p class="buttons text-center"><a href="https://grammable-pic.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a>
@@ -345,7 +345,7 @@
                                     </div>
                                 </a>
                                 <div data-images="img/close-up-of-pictures-185933.jpg" class="sr-only reference-description">
-                                    <p>I created this fun project using React. Easy and fun to use.</p>
+                                    <p style="text-align: center;">I created this fun project using React. Easy and fun to use.</p>
 
                                     <p class="buttons text-center"><a href="https://flashback2-rose.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                                 </div>
@@ -356,15 +356,15 @@
                                 <a href="#"><img src="img/book-shelves-book-stack-bookcase-books-207662.jpg" alt="" class="img-fluid">
                                     <div class="overlay">
                                         <div class="inner">
-                                            <h3 class="h4 reference-title">Flixter</h3>
-                                            <p>Udemy clone</p>
+                                            <h3 class="h4 reference-title">Under Construction</h3>
+                                            <p>Basic page</p>
                                         </div>
                                     </div>
                                 </a>
                                 <div data-images="img/book-shelves-book-stack-bookcase-books-207662.jpg" class="sr-only reference-description">
-                                    <p>I created this Udemy clone for fun. It was a creative and challenging project that I'm very proud of.</p>
+                                    <p style="text-align: center;">I created this basic one page web for those who are looking for something simple for their business.</p>
 
-                                    <p class="buttons text-center"><a href="https://flixter-ed.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
+                                    <p class="buttons text-center"><a href="https://lialeon84.github.io/underconstruction/" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a></p>
                                 </div>
                             </div>
                         </div>
