--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                     <p style="text-align: center;">I created this fun website for cat lovers to input their cats info. Giving people everywhere the opportunity to get to know each others cat.
                                     </p>
 
-                                    <p class="buttons text-center"><a href="https://meow-obsession.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a>
+<!--                                     <p class="buttons text-center"><a href="https://meow-obsession.herokuapp.com" class="btn btn-outline-primary"><i class="fa fa-globe"></i> Visit website</a> -->
 
                                 </div>
                             </div>
